.dev-workstream/fails/batch-20-keyed-topics/commit-2/tests/CycloneDDS.Runtime.Tests/Gen/temp_c/KeyedTestMessage.h
/****************************************************************

  Generated by Eclipse Cyclone DDS IDL to C Translator
  File name: tests\CycloneDDS.Runtime.Tests\Gen\temp_c/KeyedTestMessage.h
  Source: D:\Work\FastCycloneDdsCsharpBindings\tests\CycloneDDS.Runtime.Tests\Gen\KeyedTestMessage.idl
  Cyclone DDS: V0.11.0

*****************************************************************/
#ifndef DDSC_TESTS_CYCLONEDDS_RUNTIME_TESTS_GEN_TEMP_C_KEYEDTESTMESSAGE_H_74422BAF137CF5F2334A84E50B50CB4F
#define DDSC_TESTS_CYCLONEDDS_RUNTIME_TESTS_GEN_TEMP_C_KEYEDTESTMESSAGE_H_74422BAF137CF5F2334A84E50B50CB4F

#include "dds/ddsc/dds_public_impl.h"

#ifdef __cplusplus
extern "C" {
#endif

typedef struct CycloneDDS_Runtime_Tests_KeyedTestMessage
{
  int32_t sensorId;
  int32_t value;
} CycloneDDS_Runtime_Tests_KeyedTestMessage;

extern const dds_topic_descriptor_t CycloneDDS_Runtime_Tests_KeyedTestMessage_desc;

#define CycloneDDS_Runtime_Tests_KeyedTestMessage__alloc() \
((CycloneDDS_Runtime_Tests_KeyedTestMessage*) dds_alloc (sizeof (CycloneDDS_Runtime_Tests_KeyedTestMessage)));

#define CycloneDDS_Runtime_Tests_KeyedTestMessage_free(d,o) \
dds_sample_free ((d), &CycloneDDS_Runtime_Tests_KeyedTestMessage_desc, (o))

#ifdef __cplusplus
}
#endif

#endif /* DDSC_TESTS_CYCLONEDDS_RUNTIME_TESTS_GEN_TEMP_C_KEYEDTESTMESSAGE_H_74422BAF137CF5F2334A84E50B50CB4F */
